--- a/HA/HA.csproj
+++ b/HA/HA.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MqttHA.cs" />
+    <Compile Include="MusicService.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
