小米平板控制

--- a/custom_components/mipad_android/services.yaml
+++ b/custom_components/mipad_android/services.yaml
@@ -4,6 +4,7 @@ load:
     url:
       name: 网页链接地址
       description: 网页链接地址
+      required: true
       example: 'https://ha.jiluxinqing.com'
       selector:
         text:
