--- a/custom_components/mipad_android/services.yaml
+++ b/custom_components/mipad_android/services.yaml
@@ -13,6 +13,12 @@ load:
       example: '192.168.1.111'
       selector:
         text:
+    stt:
+      name: 语音识别 
+      description: 语音识别
+      example: '1'
+      selector:
+        text:
 setting:
   description: 小米平板设置
   fields:
