--- a/HA/HA.csproj
+++ b/HA/HA.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="DelayAction.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="BluetoothBLE.cs" />
     <Compile Include="MqttHA.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
